crates/aranya-policy-compiler/tests/data/match_stmt/arm_struct_composition_invalid_type.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: invalid expression
   |
11 |         Foo { x: 10, ...b } => {}
   |         ^^^^^^^^^^^^^^^^^^^ match pattern must be a literal expression
